# subset-selection-for-matrices

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
bench/: CMakeLists.txt  README.md  main.cpp  matrix_utilities.hpp  plotter.py
bench/include/: GaussianMatrixGenerator.h  GraphIncidenceMatrixGenerator.h  MatrixGenerator.h  MatrixGeneratorBase.h  MatrixGeneratorFactory.h  MatrixGenerators.h  OrthonormalVectorsMatrixGenerator.h  ProgressBar.h  SelectorFactory.h  SigmaMatrixGenerator.h  Tester.h  Utils.h  WeightedGraphIncidenceMatrixGenerator.h
bench/include/MatrixGenerators/: GaussianMatrixGenerator.h  GraphIncidenceMatrixGenerator.h  MatrixFromFileGenerator.h  MatrixGeneratorBase.h  OrthonormalVectorsMatrixGenerator.h  SigmaMatrixGenerator.h  WeightedGraphIncidenceMatrixGenerator.h
bench/old/: matrix_generator.h  plotter.ipynb  subset_selection.h  tester.h  tester.hpp
bench/src/: main.cpp
benchmark/: matrix_generator.hpp  plotter.ipynb
cmake/: MatSubsetConfig.cmake.in
demos/: CMakeLists.txt
demos/basic_usage/: CMakeLists.txt
demos/theoretical_bounds/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  conf.py.in
docs/pages/: examples.dox  getting_started.dox
examples/: CMakeLists.txt
examples/BasicUsage/: CMakeLists.txt
examples/BasicUsage/src/: main.cpp
examples/TheoreticalBounds/: CMakeLists.txt
examples/TheoreticalBounds/src/: main.cpp
examples/basic_usage/: CMakeLists.txt
examples/basic_usage/src/: main.cpp
examples/theoretical_bounds/: CMakeLists.txt
examples/theoretical_bounds/src/: main.cpp
experiments/: CMakeLists.txt
experiments/derandomized_volume_optimization/: CMakeLists.txt  OptimizedDerandomizedVolumeSelector.h
experiments/derandomized_volume_optimization/build_dbg/: CMakeCache.txt  Makefile  cmake_install.cmake
experiments/derandomized_volume_optimization/src/: main.cpp
experiments/dlra_deim/: CMakeLists.txt
experiments/dlra_deim/include/AcousticEquation/: AcousticRhs.h  DenseSolver.h  FiniteDifference.h  QttAcousticRhs.h
experiments/dlra_deim/include/AllenCahnEquation/: AllenCahnDenseSolver.h  AllenCahnInitialCondition.h  AllenCahnRhs.h
experiments/dlra_deim/include/TTCrossSolver/: CoreBase.h  SnapshotSaver.h  TensorTrainCore.h
experiments/dlra_deim/src/: main.cpp  main_allen_cahn.cpp  main_qtt.cpp
experiments/dlra_deim/tests/: CMakeLists.txt
experiments/dlra_deim/tests/src/: AcousticRhs.cpp  SnapshotSaver.cpp  Solver.cpp
experiments/dlra_deim_acoustic/: CMakeLists.txt
experiments/dlra_deim_acoustic/include/AcousticEquation/: AcousticRhs.h
experiments/dlra_deim_acoustic/include/TTCrossSolver/: FiberEvaluator.h  Solver.h  TensorFibers.h  TensorTrain.h
experiments/dlra_deim_acoustic/tests/src/: AdaptiveCross.cpp  TensorTrain.cpp  TensorTrainCore.cpp
experiments/exchange_based_subset_selection/: config.json  config_small.json  plot_dispersion_vs_k.py  plot_frob_orthonormal_comparison.py  plot_swap_counts.py  run_all.sh
experiments/iteration_trace/: CMakeLists.txt  config.json  plotter.py
experiments/iteration_trace/src/: main.cpp
experiments/subset_selection_for_matrices_by_volume_sampling/: config_superconductivity_deterministic.json  config_superconductivity_randomized.json  plot.py  prepare_superconductivity.py  run_all.sh
experiments/subset_selection_for_matrices_by_volume_sampling/tests/: CMakeLists.txt
experiments/subset_selection_for_matrices_by_volume_sampling/tests/src/: AcousticRhs.cpp  AdaptiveCross.cpp  Solver.cpp  TensorFibers.cpp  TensorTrain.cpp  TensorTrainCore.cpp
experiments/subset_selection_for_matrices_in_spectral_norm/: config.json  config_abalone_deterministic.json  config_abalone_randomized.json  plot.py  prepare_abalone.py  run_all.sh
experiments/tools/: CMakeLists.txt  plotter.py
experiments/tools/include/: MatrixGeneratorFactory.h  MatrixGenerators.h  ProgressBar.h  SelectorFactory.h  Tester.h  Utils.h
experiments/tools/include/MatrixGenerators/: GaussianMatrixGenerator.h  GraphIncidenceMatrixGenerator.h  MatrixFromFileGenerator.h  MatrixGeneratorBase.h  OrthonormalVectorsMatrixGenerator.h  SigmaMatrixGenerator.h  WeightedGraphIncidenceMatrixGenerator.h
experiments/tools/src/: main.cpp
experiments/volume_vs_frobenius/: config.json  scatter.py
include/: MatSubset.h  matrix_generator.h  matrix_utilities.h  tester.h
include/MatSubset/: DualSetSelector.h  Enums.h  FrobeniusRemovalSelector.h  InterlacingFamiliesSelector.h  RankRevealingQRSelector.h  SelectorBase.h  SpectralRemovalSelector.h  SpectralSelectionSelector.h  VolumeRemovalSelector.h
include/subset_selection_algorithms/: all_algorithms.h  gradient_based_replacement_selector.h  gradient_descent_selector.h  greedy_removal_1_selector.h  greedy_removal_2_selector.h  greedy_selection_1_selector.h  rank_revealing_QR_selector.h  subset_selector.h
lib/: CMakeLists.txt
lib/cmake/: MatSubsetConfig.cmake.in  MatSubsetUninstall.cmake
python_utilities/: greedy_selection.ipynb  plotter.ipynb
src/: main.cpp  matrix_generator.cpp  matrix_utilities.cpp  tester.cpp
src/subset_selection_algorithms/: brute_force_selector.cpp  gradient_based_replacement_selector.cpp  gradient_descent_selector.cpp  greedy_removal_1_selector.cpp  greedy_removal_2_selector.cpp  greedy_selection_1_selector.cpp  rank_revealing_QR_selector.cpp  subset_selector.cpp
subset_selection/include/: enums.h  matrix_generator.h  matrix_utilities.h  subset_selection.h  tester.h
subset_selection/out_greedy_removal_2_10/: bound.csv  (+1 more)
tests/: CMakeLists.txt
tests/src/: CheckBounds.h  CheckReproducibility.h  CheckSubset.h  ColumnPivotingSelector.cpp  DerandomizedVolumeSelector.cpp  DominantSelector.cpp  DualSetSelector.cpp  ForwardIterativeVolumeSamplingSelector.cpp  FrobeniusRemovalSelector.cpp  LeverageScoresSelector.cpp  RandomColumnsSelector.cpp  RankRevealingQRSelector.cpp  RectMaxvolSelector.cpp  ReverseIterativeVolumeSamplingSelector.cpp  SecularEquationSolver.cpp  SelectorBase.cpp  SpectralRemovalSelector.cpp  SpectralSelectionSelector.cpp  VolumeAddRemoveSelector.cpp  VolumeRemovalSelector.cpp
(+69 files in other folders)
